// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundler bundles packages with json imports 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/Image/resolveAssetSource",
        ],
        "size": 534000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/Image/resolveAssetSource",
        ],
        "size": 534000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 18000,
      },
    },
  },
  "name": "react-native-svg",
  "peerDependencies": {
    "react": "*",
    "react-native": "^0.50.0",
  },
  "version": "12.1.1",
}
`;

exports[`bundler created bundle for react-native-gesture-handler 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 51000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 51000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 108000,
      },
    },
  },
  "name": "react-native-gesture-handler",
  "peerDependencies": {},
  "version": "1.6.0",
}
`;

exports[`bundler creates bundle for @react-navigation/native 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 102430,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 102426,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 107732,
      },
    },
  },
  "name": "@react-navigation/native",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "5.7.3",
}
`;

exports[`bundler creates bundle for @react-navigation/stack 1`] = `
{
  "files": {
    "android": {
      "assets/src_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@1.5x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-native-community/masked-view",
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-safe-area-context",
          "react-native-screens",
        ],
        "size": 93000,
      },
    },
    "ios": {
      "assets/src_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@1.5x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/src_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-native-community/masked-view",
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-safe-area-context",
          "react-native-screens",
        ],
        "size": 93000,
      },
    },
    "web": {
      "assets/lib_module_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/lib_module_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-safe-area-context",
          "react-native-screens",
        ],
        "size": 102000,
      },
    },
  },
  "name": "@react-navigation/stack",
  "peerDependencies": {
    "@react-native-community/masked-view": "^0.1.0",
    "@react-navigation/native": "5.0.5",
    "react": "*",
    "react-native": "*",
    "react-native-gesture-handler": "^1.0.0",
    "react-native-safe-area-context": "^0.6.0",
    "react-native-screens": "^2.0.0",
  },
  "version": "5.9.0",
}
`;

exports[`bundler creates bundle for @sentry/react-native@3.4.2 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/Core/Devtools/getDevServer",
          "react-native/Libraries/Core/Devtools/parseErrorStack",
          "react-native/Libraries/Core/Devtools/symbolicateStackTrace",
          "react-native/Libraries/Utilities/PolyfillFunctions",
        ],
        "size": 303000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/Core/Devtools/getDevServer",
          "react-native/Libraries/Core/Devtools/parseErrorStack",
          "react-native/Libraries/Core/Devtools/symbolicateStackTrace",
          "react-native/Libraries/Utilities/PolyfillFunctions",
        ],
        "size": 303000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/Core/Devtools/getDevServer",
          "react-native/Libraries/Core/Devtools/parseErrorStack",
          "react-native/Libraries/Core/Devtools/symbolicateStackTrace",
          "react-native/Libraries/Utilities/PolyfillFunctions",
        ],
        "size": 303000,
      },
    },
  },
  "name": "@sentry/react-native",
  "peerDependencies": {
    "react": "^16.4.1",
    "react-native": "^0.56.0",
  },
  "version": "3.4.2",
}
`;

exports[`bundler creates bundle for a single platform 1`] = `
{
  "files": {
    "ios": {
      "bundle.js": {
        "externals": [
          "mobx",
        ],
        "size": 42000,
      },
    },
  },
  "name": "firestorter",
  "peerDependencies": {
    "mobx": "^4.0.0",
  },
  "version": "2.0.1",
}
`;

exports[`bundler creates bundle for graphql@14.0.0 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [],
        "size": 219000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [],
        "size": 219000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [],
        "size": 219000,
      },
    },
  },
  "name": "graphql",
  "peerDependencies": {},
  "version": "14.0.0",
}
`;

exports[`bundler creates bundle for graphql@15.5.1 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [],
        "size": 183000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [],
        "size": 183000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [],
        "size": 183000,
      },
    },
  },
  "name": "graphql",
  "peerDependencies": {},
  "version": "15.5.1",
}
`;

exports[`bundler creates bundle for react-native-reanimated@2.9.1 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/Renderer/shims/ReactNative",
        ],
        "size": 618000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/Renderer/shims/ReactNative",
        ],
        "size": 618000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 612000,
      },
    },
  },
  "name": "react-native-reanimated",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "2.9.1",
}
`;

exports[`bundler creates bundle for react-native-screens/native-stack 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "react",
          "react-native",
          "react-native-screens",
          "react-native/Libraries/ReactNative/AppContainer",
        ],
        "size": 6000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "react",
          "react-native",
          "react-native-screens",
          "react-native/Libraries/ReactNative/AppContainer",
        ],
        "size": 6000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "react",
          "react-native",
          "react-native-screens",
          "react-native/Libraries/ReactNative/AppContainer",
        ],
        "size": 6000,
      },
    },
  },
  "name": "react-native-screens",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "2.11.0",
}
`;

exports[`bundler creates bundle for react-native-webview 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/BatchedBridge/BatchedBridge",
          "react-native/Libraries/NativeComponent/NativeComponentRegistry",
          "react-native/Libraries/Utilities/codegenNativeCommands",
        ],
        "size": 435000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react-native/Libraries/NativeComponent/NativeComponentRegistry",
          "react-native/Libraries/Utilities/codegenNativeCommands",
        ],
        "size": 435000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 0,
      },
    },
  },
  "name": "react-native-webview",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "13.7.0",
}
`;

exports[`bundler creates bundle for subpath 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 36000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 36000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 93000,
      },
    },
  },
  "name": "react-native-gesture-handler",
  "peerDependencies": {},
  "version": "1.6.0",
}
`;

exports[`bundler creates bundle for subpath of core package 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [],
        "size": 3000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [],
        "size": 3000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [],
        "size": 3000,
      },
    },
  },
  "name": "react-native-web",
  "peerDependencies": {
    "react": "^16.5.1",
    "react-dom": "^16.5.1",
  },
  "version": "0.14.4",
}
`;

exports[`bundler externalizes dependencies that are marked as external 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "@unimodules/core",
          "expo-app-auth",
          "expo-constants",
          "react-native",
        ],
        "size": 6000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "@unimodules/core",
          "expo-app-auth",
          "expo-constants",
          "react-native",
        ],
        "size": 6000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "@unimodules/core",
          "expo-app-auth",
          "expo-constants",
          "react-native",
        ],
        "size": 6000,
      },
    },
  },
  "name": "expo-google-app-auth",
  "peerDependencies": {
    "@unimodules/core": "*",
    "expo-app-auth": "~9.2.0",
    "expo-constants": "*",
    "react": "*",
    "react-native": "*",
  },
  "version": "8.1.3",
}
`;

exports[`bundler externalizes package-externals of dependencies 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "@expo/vector-icons",
          "expo-av",
          "react",
          "react-native",
          "react-native-safe-area-context",
          "react-native-svg",
          "react-native/Libraries/BatchedBridge/BatchedBridge",
        ],
        "size": 285622,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "@expo/vector-icons",
          "expo-av",
          "react",
          "react-native",
          "react-native-safe-area-context",
          "react-native-svg",
        ],
        "size": 292736,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "@expo/vector-icons",
          "expo-av",
          "react",
          "react-dom",
          "react-native",
          "react-native-safe-area-context",
          "react-native-svg",
        ],
        "size": 633857,
      },
    },
  },
  "name": "@draftbit/ui",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "40.34.4",
}
`;

exports[`bundler externalizes references to react-native-gesture-handler/DrawerLayout 1`] = `
{
  "files": {
    "ios": {
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@1.5x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@2x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@3x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@4x.png": {
        "size": 0,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backiconmask.png": {
        "size": 0,
      },
      "bundle.js": {
        "externals": [
          "@react-navigation/native",
          "AssetRegistry",
          "react",
          "react-native",
          "react-native-gesture-handler",
          "react-native-gesture-handler/DrawerLayout",
          "react-native-screens",
        ],
        "size": 204000,
      },
    },
  },
  "name": "react-navigation",
  "peerDependencies": {
    "@react-navigation/native": "~3.6.2",
    "react": "*",
    "react-native": "*",
  },
  "version": "3.13.0",
}
`;

exports[`bundler filter aliased react-native dependencies 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react-native",
        ],
        "size": 6000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 9000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 0,
      },
    },
  },
  "name": "@react-native-community/datetimepicker",
  "peerDependencies": {
    "react": "^16.8.3",
    "react-native": "^0.59.0",
  },
  "version": "3.0.3",
}
`;

exports[`bundler filter internal react-native dependency TextInputState 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 6000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 6000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 6000,
      },
    },
  },
  "name": "@react-native-community/viewpager",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "5.0.11",
}
`;

exports[`bundler resolves commonly missing peer-deps (prop-types) 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 18000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 18000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 18000,
      },
    },
  },
  "name": "react-native-responsive-grid",
  "peerDependencies": {},
  "version": "0.32.4",
}
`;

exports[`bundler resolves external source-code references 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "@unimodules/core",
          "react",
          "react-native",
        ],
        "size": 6000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "@unimodules/core",
          "react",
          "react-native",
        ],
        "size": 6000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
        ],
        "size": 15000,
      },
    },
  },
  "name": "expo-linear-gradient",
  "peerDependencies": {
    "react": "*",
    "react-native": "*",
  },
  "version": "8.2.1",
}
`;
